--- a/templates/_general.html
+++ b/templates/_general.html
@@ -2,7 +2,7 @@
 <html lang="en-us" class="layout-pf layout-pf-fixed transitions">
 <head>
     <meta charset="utf-8">
-    <title>Device Wizard</title>
+    <title>ENTIRETY</title>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 
