--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>N5GEH Device Wizard application</h1>
+    <h1>N5GEH ENTIRETY application</h1>
     <div class="container-fluid container-cards-pf">
         <div class="row row-cards-pf">
             <div class="col-xs-6 col-sm-6 col-md-6">
